--- a/src/main/webapp/script/cliente/View.xhtml
+++ b/src/main/webapp/script/cliente/View.xhtml
@@ -213,7 +213,7 @@
 
 
                                 <p:separator/>
-                                <p:commandButton id="showDialogButton" value="#{bundle.destroy}" onclick="confirmation.show()" 
+                                <p:commandButton id="showDialogButton" value="#{bundle.destroy}" onclick="PF('confirmation').show()" 
                                                  rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" 
                                                  icon="ui-icon ui-icon-trash" disabled="#{not clienteController.puedeEliminar(clienteController.selected)}"/> 
                             </p:toolbarGroup>  
@@ -233,8 +233,8 @@
 
                                 <f:facet name="footer">
                                     <p:commandButton id="confirm" value="#{bundle.yesDelete}" action="#{clienteController.destroySelected}" 
-                                                     update=":form" oncomplete="confirmation.hide()"/>
-                                    <p:commandButton id="decline" value="#{bundle.decline}" onclick="confirmation.hide()" type="button" /> 
+                                                     update=":form" oncomplete="PF('confirmation').hide()"/>
+                                    <p:commandButton id="decline" value="#{bundle.decline}" onclick="PF('confirmation').hide()" type="button" /> 
                                 </f:facet>
 
                             </p:dialog>
