--- a/src/main/webapp/script/cliente/List.xhtml
+++ b/src/main/webapp/script/cliente/List.xhtml
@@ -90,7 +90,7 @@
                         <p:column headerText="Acción">
                             <p:commandButton id="viewBtn" ajax="false" action="#{clienteController.prepareView(item)}" title="Ver" icon="ui-icon ui-icon-document"/>
                             <p:commandButton id="editBtn" ajax="false" action="#{clienteController.prepareEdit(item)}" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" title="Editar" icon="ui-icon ui-icon-pencil"/>
-                            <p:commandButton id="showDialogButton" title="Eliminar" update=":form:confirmDialog" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" action="#{clienteController.setSelected(item)}" oncomplete="confirmation.show()" disabled="#{not clienteController.puedeEliminar(item)}" icon="ui-icon ui-icon-trash"/>
+                            <p:commandButton id="showDialogButton" title="Eliminar" update=":form:confirmDialog" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" action="#{clienteController.setSelected(item)}" oncomplete="PF('confirmation').show()" disabled="#{not clienteController.puedeEliminar(item)}" icon="ui-icon ui-icon-trash"/>
                         </p:column>
 
 
@@ -146,7 +146,7 @@
                     <f:facet name="footer">
                         <p:commandButton id="confirm" value="#{bundle.yesDelete}" action="#{clienteController.destroy()}" 
                                          ajax="false"/>
-                        <p:commandButton id="decline" value="#{bundle.decline}" onclick="confirmation.hide()" type="button" /> 
+                        <p:commandButton id="decline" value="#{bundle.decline}" onclick="PF('confirmation').hide()" type="button" /> 
                     </f:facet>
 
                 </p:dialog>
