--- a/src/main/webapp/script/producto/List.xhtml
+++ b/src/main/webapp/script/producto/List.xhtml
@@ -29,20 +29,13 @@
 
                 <h:panelGroup >
 
-                    <p:dataTable widgetVar="CategoriaTable" var="item" value="#{productoController.items}"
+                    <p:dataTable var="item" value="#{productoController.items}"
                                  selectionMode="single"
-                                 emptyMessage="#{bundle.ListCategoriaEmpty}">
+                                 emptyMessage="#{bundle.ListProductoContratadoEmpty}">
 
                         <f:facet name="header">
-                            <h:outputText value="Listado de #{applicationBean.productDescription}(s) (#{productoController.pagination.pageFirstItem + 1} - #{productoController.pagination.pageLastItem + 1} de #{productoController.pagination.itemsCount}) " rendered="#{productoController.items.rowCount > 0}"></h:outputText>
-                            <h:outputText value="Listado de #{applicationBean.productDescription}(s)  #{bundle.ListCategoriaEmpty} " rendered="#{productoController.items.rowCount == 0}"></h:outputText>
-                            <h:commandLink action="#{productoController.previous}" value="Anteriores #{productoController.pagination.pageSize}" rendered="#{productoController.pagination.hasPreviousPage}"/>&nbsp;
-                            <h:commandLink action="#{productoController.next}" value="Siguientes #{productoController.pagination.pageSize}" rendered="#{productoController.pagination.hasNextPage}"/>&nbsp;
-
+                            <h:outputText value="Listado de #{applicationBean.productDescription}(s)"></h:outputText>
                         </f:facet>
-
-
-
                         <p:column headerText="#{bundle.ProductoTitle_idProducto}">
                             <h:outputText value="#{item.idProducto}"/>
                         </p:column>
@@ -70,7 +63,7 @@
 
                         <p:column headerText="Acción">
                             <p:commandButton id="editBtn" ajax="false" action="#{productoController.prepareEdit(item)}" title="Editar #{applicationBean.productDescription}" icon="ui-icon ui-icon-pencil"/>
-                            <p:commandButton id="showDialogButton" title="Eliminar" update=":form:confirmDialog" action="#{productoController.setSelected(item)}" oncomplete="confirmation.show()" icon="ui-icon ui-icon-trash"/>
+                            <p:commandButton id="showDialogButton" title="Eliminar" update=":form:confirmDialog" action="#{productoController.setSelected(item)}" oncomplete="PF('confirmation').show()" icon="ui-icon ui-icon-trash"/>
                         </p:column>
 
                         <f:facet name="footer">
@@ -120,7 +113,7 @@
                     <f:facet name="footer">
                         <p:commandButton id="confirm" value="#{bundle.yesDelete}" action="#{productoController.destroy()}" 
                                          ajax="false"/>
-                        <p:commandButton id="decline" value="#{bundle.decline}" onclick="confirmation.hide()" type="button" /> 
+                        <p:commandButton id="decline" value="#{bundle.decline}" onclick="PF('confirmation').hide()" type="button" /> 
                     </f:facet>
 
                 </p:dialog>
