--- a/src/main/webapp/script/rol/List.xhtml
+++ b/src/main/webapp/script/rol/List.xhtml
@@ -48,7 +48,7 @@
                         <p:column headerText="Acción">
                             <p:commandButton id="viewBtn" ajax="false" action="#{rolController.prepareView(item)}" disabled="#{not rolController.puedeEditar(item)}" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" title="Ver" icon="ui-icon ui-icon-document"/>
                             <p:commandButton id="editBtn" ajax="false" action="#{rolController.prepareEdit(item)}" disabled="#{not rolController.puedeEditar(item)}" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" title="Editar" icon="ui-icon ui-icon-pencil"/>
-                            <p:commandButton id="showDialogButton" title="Eliminar" update=":form:confirmDialog" action="#{rolController.setSelected(item)}" oncomplete="confirmation.show()" disabled="#{not rolController.puedeEditar(item)}" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" icon="ui-icon ui-icon-trash"/>
+                            <p:commandButton id="showDialogButton" title="Eliminar" update=":form:confirmDialog" action="#{rolController.setSelected(item)}" oncomplete="PF('confirmation').show()" disabled="#{not rolController.puedeEditar(item)}" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" icon="ui-icon ui-icon-trash"/>
                         </p:column>
 
                         <f:facet name="footer">
@@ -94,7 +94,7 @@
                     <f:facet name="footer">
                         <p:commandButton id="confirm" value="#{bundle.yesDelete}" action="#{rolController.destroy()}" 
                                          ajax="false"/>
-                        <p:commandButton id="decline" value="#{bundle.decline}" onclick="confirmation.hide()" type="button" /> 
+                        <p:commandButton id="decline" value="#{bundle.decline}" onclick="PF('confirmation').hide()" type="button" /> 
                     </f:facet>
 
                 </p:dialog>
