--- a/src/main/webapp/script/template_inbox.xhtml
+++ b/src/main/webapp/script/template_inbox.xhtml
@@ -17,8 +17,11 @@
             <h:outputStylesheet library="css" name="jsfcrud.css"/>
             <h:outputStylesheet library="awesome" name="css/font-awesome.css"/>
 
-            <ui:insert name="head"></ui:insert>
             <style type="text/css">
+
+                .ui-datatable table {
+                    table-layout: auto !important;
+                }
 
                 .ui-layout-north {
                     z-index:20 !important;
@@ -117,19 +120,25 @@
                 function stop() {
                     PF('statusDialog').hide();
                 }
+
+                function handleFacesMessage(facesmessage) {
+                    facesmessage.severity = 'info';
+                    PF('growl').show([facesmessage]);
+                }
             </script>
             <h:outputScript name="jsf.js" library="javax.faces"/>
 
+            <ui:insert name="head"></ui:insert>
             <ui:insert name="scripts"></ui:insert>
         </h:head>
 
         <h:body id="mainbody">
 
+            <p:socket onMessage="handleFacesMessage" 
+                      channel="#{UserSessionBean.channel}" />
+
             <f:event type="preRenderView" listener="#{casoController.initializeData}" />
-
             <pe:ajaxErrorHandler /> 
-
-
             <p:ajaxStatus style="display:block;">
                 <f:facet name="default">
                     <h:outputText value="Por favor espere..." style="font-weight: bold;"/>
@@ -217,9 +226,7 @@
                                                 disabled="#{not filtroAcceso.verificarAccesoAFuncionAdministrarVistas()}">
                                         <p:resetInput target="@form" />
                                     </p:menuitem>
-                                    <p:menuitem value="Categorías" action="#{categoriaController.prepareList}" ajax="false" icon="fa fa-folder">
-                                        <p:resetInput target="@form" />
-                                    </p:menuitem>
+
                                     <p:menuitem value="Sub Estados de Casos" action="#{subEstadoCasoController.prepareList}" ajax="false" icon="fa fa-bookmark">
                                         <p:resetInput target="@form" />
                                     </p:menuitem>
@@ -261,14 +268,14 @@
                                     </p:menuitem>
                                 </p:submenu>    
 
-                                <p:submenu label="Mi Cuenta" icon="fa fa-user">                                
+                                <p:submenu label="#{UserSessionBean.current.capitalName}" icon="fa fa-user">                                
                                     <p:menuitem value="Mis Datos" action="myAccount" ajax="false" icon="fa fa-user">
                                         <p:resetInput target="@form" />
                                     </p:menuitem>
                                     <p:menuitem value="Respuestas Predefinidas" action="#{clippingController.prepareList()}" ajax="false" icon="fa fa-comment-o">
                                         <p:resetInput target="@form" />
                                     </p:menuitem>
-                                    <p:menuitem value="Cambiar Contraseña" onclick="panelChangePass.show()" icon="fa fa-key">
+                                    <p:menuitem value="Cambiar Contraseña" onclick="PF('panelChangePass').show()" icon="fa fa-key">
                                         <p:resetInput target="@form" />
                                     </p:menuitem>
                                     <p:menuitem action="#{loginController.logout_action}" ajax="false" value="Cerrar Sesión" icon="fa fa-power-off">
@@ -323,19 +330,11 @@
 
                             </p:menubar>
 
-                            <p:tooltip for=":formTopMenu:casosActualizados" value="Casos con actualizaciones no revisadas" showEffect="fade" hideEffect="fade" />
-                            <p:tooltip for=":formTopMenu:casosPendientes" value="Casos pendientes de resolver" showEffect="fade" hideEffect="fade" />
-                            <p:tooltip for=":formTopMenu:casosPorVencer" value="Casos por vencer" showEffect="fade" hideEffect="fade" />
-                            <p:tooltip for=":formTopMenu:casosVencidos" value="Casos vencidos" showEffect="fade" hideEffect="fade" />
+                            <p:tooltip for=":formTopMenu:casosActualizados" value="Casos con actualizaciones no revisadas"/>
+                            <p:tooltip for=":formTopMenu:casosPendientes" value="Casos pendientes de resolver"/>
+                            <p:tooltip for=":formTopMenu:casosPorVencer" value="Casos por vencer"/>
+                            <p:tooltip for=":formTopMenu:casosVencidos" value="Casos vencidos"/>
                         </h:form>
-
-
-
-
-
-
-
-
 
                     </ui:insert>  
                 </pe:layoutPane>  
@@ -353,9 +352,6 @@
                       transient="true" draggable="false" closable="false" resizable="false" closeOnEscape="true">  
                 <p:graphicImage library="images" name="ajaxloadingbar.gif" />
             </p:dialog>
-
-
-
 
 
             <p:dialog id="panelChangePassId" appendTo="@(body)" closeOnEscape="true" widgetVar="panelChangePass" header="Cambiar Contraseña" modal="true">
