--- a/src/main/webapp/script/usuario/List.xhtml
+++ b/src/main/webapp/script/usuario/List.xhtml
@@ -74,7 +74,7 @@
                           <p:column headerText="Acción">
                             <p:commandButton id="viewBtn" ajax="false" action="#{usuarioController.prepareView(item)}" disabled="#{not usuarioController.puedeEditar(item)}" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" title="Ver" icon="ui-icon ui-icon-document"/>
                             <p:commandButton id="editBtn" ajax="false" action="#{usuarioController.prepareEdit(item)}" disabled="#{not usuarioController.puedeEditar(item)}" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" title="Editar" icon="ui-icon ui-icon-pencil"/>
-                            <p:commandButton id="showDialogButton" title="Eliminar" update=":form:confirmDialog" action="#{usuarioController.setSelected(item)}" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" oncomplete="confirmation.show()" disabled="#{not usuarioController.puedeEditar(item)}" icon="ui-icon ui-icon-trash"/>
+                            <p:commandButton id="showDialogButton" title="Eliminar" update=":form:confirmDialog" action="#{usuarioController.setSelected(item)}" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" oncomplete="PF('confirmation').show()" disabled="#{not usuarioController.puedeEditar(item)}" icon="ui-icon ui-icon-trash"/>
                         </p:column>
 
                         <f:facet name="footer">
@@ -118,7 +118,7 @@
                     <f:facet name="footer">
                         <p:commandButton id="confirm" value="#{bundle.yesDelete}" action="#{usuarioController.destroy()}" 
                                          ajax="false"/>
-                        <p:commandButton id="decline" value="#{bundle.decline}" onclick="confirmation.hide()" type="button" /> 
+                        <p:commandButton id="decline" value="#{bundle.decline}" onclick="PF('confirmation').hide()" type="button" /> 
                     </f:facet>
 
                 </p:dialog>
